--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   hive: ^2.2.3
 
 dev_dependencies:
-  lints: ^5.1.1
+  lints: any
   test: ^1.25.15
 
 # For information on the generic Dart part of this file, see the
