--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,16 @@
 name: cache_manager
-description: "A new Flutter project."
+description: "A Dart package for managing cache with support for multiple storage backends."
 version: 1.0.0
 homepage: https://github.com/CoderNamedHendrick/cache_manager
 repository: https://github.com/CoderNamedHendrick/cache_manager
 issue_tracker: https://github.com/CoderNamedHendrick/cache_manager/issues
+
+topics:
+  - caching
+  - cache
+  - backend
+  - cache-management
+  - data-management
 
 environment:
   sdk: ^3.0.0
