--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,7 @@ jobs:
         run: dart format . --set-exit-if-changed
 
       - name: Lint analysis
-        run: dart analyze --no-pub
+        run: dart analyze
 
       - name: Run tests
         run: dart test --coverage coverage/lcov.info
