--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cache_manager
+name: cache_manager_plus
 description: "A Dart package for managing cache with support for multiple storage backends."
 version: 1.0.0
 homepage: https://github.com/CoderNamedHendrick/cache_manager
