--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,10 @@ jobs:
         run: dart analyze
 
       - name: Run tests
-        run: dart test --coverage coverage/lcov.info
+        run: |
+          dart test --coverage coverage/lcov.info
+          ls 
+          ls ./coverage
 
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v5
