--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,5 +52,6 @@ jobs:
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v5
         with:
-          files: /Users/runner/work/cache_manager/cache_manager/coverage/lcov.info
+          disable_search: true
+          fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
