--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,9 +45,7 @@ jobs:
       - name: Run tests
         run: |
           dart test --coverage coverage/lcov.info
-          ls 
-          ls ./coverage
-          pwd
+          dart pub global run coverage:test_with_coverage
 
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v5
